Changed home page UI

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
@@ -8,8 +9,28 @@
     <link rel='stylesheet' type='text/css' media='screen' href='css/src.css'>
     <script src='js/src.js'></script>
 </head>
+
 <body>
-    <h1>Hello git</h1>
-    <div></div>
+    <h1>Tehcnologies</h1>
+
+    <ul>
+        <h3><li>Frontend Technologies</li></h3>
+        <ol type="1">
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>Javascript</li>
+            <li>React</li>
+            <li>Angular</li>
+            <li>Vue.js</li>
+        </ol>
+        
+        <h3><li>Backend Technologies</li></h3>
+        <ol type="1">
+            <li>Java</li>
+            <li>Nodejs</li>
+            <li>Python</li>
+        </ol>
+    </ul>
 </body>
+
 </html>
