--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <h1>Tehcnologies</h1>
+    <div><h1>Technologies</h1></div>
 
     <ul>
         <h3><li>Frontend Technologies</li></h3>
