added cloud services

--- a/index.html
+++ b/index.html
@@ -43,6 +43,10 @@
             <li>Express</li>
             <li>Meteor</li>
             <li>Polymer</li>
+        <h3><li>Cloud Services</li></h3>
+        <ol type="1">
+            <li>Amazon Web Services</li>
+            <li>Google Cloud Platforms</li>
         </ol>
     </ul>
 </body>
