added cloud services

--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
             <li>PHP</li>
             <li>ASP.net</li>
         </ol>
+        <h3><li>Cloud Services</li></h3>
+        <ol type="1">
+            <li>Amazon Web Services</li>
+            <li>Google Cloud Platforms</li>
+        </ol>
     </ul>
 </body>
 
