JS frameworks added

--- a/index.html
+++ b/index.html
@@ -32,6 +32,16 @@
             <li>PHP</li>
             <li>ASP.net</li>
         </ol>
+
+        <h3><li>Javascript framworks</li></h3>
+        <ol type="1">
+            <li>Android JS</li>
+            <li>Nodejs</li>
+            <li>Angular</li>
+            <li>React JS</li>
+            <li>VueJS</li>
+            <li>Express</li>
+        </ol>
     </ul>
 </body>
 
