--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
         <ol type="1">
             <li>Amazon Web Services</li>
             <li>Google Cloud Platforms</li>
+            <li>Microsoft Azure</li>
+            <li>IBM Cloud</li>
         </ol>
     </ul>
 </body>
