--- a/index.html
+++ b/index.html
@@ -11,10 +11,14 @@
 </head>
 
 <body>
-    <div><h1>Technologies</h1></div>
+    <div>
+        <h1>Technologies</h1>
+    </div>
 
     <ul>
-        <h3><li>Frontend Technologies</li></h3>
+        <h3>
+            <li>Frontend Technologies</li>
+        </h3>
         <ol type="1">
             <li>HTML</li>
             <li>CSS</li>
@@ -23,8 +27,10 @@
             <li>Angular</li>
             <li>Vue.js</li>
         </ol>
-        
-        <h3><li>Backend Technologies</li></h3>
+
+        <h3>
+            <li>Backend Technologies</li>
+        </h3>
         <ol type="1">
             <li>Java</li>
             <li>Nodejs</li>
@@ -33,7 +39,9 @@
             <li>ASP.net</li>
         </ol>
 
-        <h3><li>Javascript framworks</li></h3>
+        <h3>
+            <li>Javascript framworks</li>
+        </h3>
         <ol type="1">
             <li>Android JS</li>
             <li>Nodejs</li>
@@ -43,7 +51,10 @@
             <li>Express</li>
             <li>Meteor</li>
             <li>Polymer</li>
-        <h3><li>Cloud Services</li></h3>
+        </ol>
+        <h3>
+            <li>Cloud Services</li>
+        </h3>
         <ol type="1">
             <li>Amazon Web Services</li>
             <li>Google Cloud Platforms</li>
