new cloud service providers added

--- a/index.html
+++ b/index.html
@@ -60,6 +60,8 @@
             <li>Google Cloud Platforms</li>
             <li>Microsoft Azure</li>
             <li>IBM Cloud</li>
+            <li>Alibaba Cloud.</li>
+            <li>Oracle</li>
         </ol>
     </ul>
 </body>
